# cloud-manager

./: .gitignore  CLAUDE.md  DEVELOPMENT_STATUS.md  PLAN.md  PROJECT_STATUS.md  docker-compose.yml  package-lock.json  package.json  start.sh  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/web/: eslint.config.mjs  middleware.ts  next.config.ts  package.json  playwright.config.ts  tsconfig.json
docs/: README.md  api-reference.md  architecture.md  contributing.md  deployment.md  development.md  security.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
infra/docker/: Dockerfile.gateway  Dockerfile.rust-service  Dockerfile.web
infra/k8s/: analytics-service.yaml  auth-service.yaml  claude-ai-service.yaml  cloud-service.yaml  configmap.yaml  cost-service.yaml  data-engineering-service.yaml  gateway-deployment.yaml  hpa.yaml  ingress.yaml  monitoring-service.yaml  namespace.yaml  network-policy.yaml  secrets.yaml  security-service.yaml  (+2 more)
services/: Cargo.toml
services/analytics-service/: Cargo.toml
services/analytics-service/src/: config.rs  error.rs  main.rs  store.rs
services/analytics-service/src/handlers/: mod.rs  overview.rs  query.rs  query_engines.rs  reports.rs  search.rs  visualizations.rs
services/analytics-service/src/models/: analytics.rs
services/analytics-service/src/providers/: aws_analytics.rs  mock.rs  mod.rs
services/analytics-service/src/traits/: mod.rs
services/auth-service/: Cargo.toml
services/auth-service/src/: config.rs  error.rs  jwt.rs  main.rs  permissions.rs
services/auth-service/src/handlers/: approval_workflows.rs  approvals.rs  audit.rs  auth.rs  cloud_accounts.rs  mod.rs  notifications.rs  organizations.rs  users.rs  webhooks.rs
services/auth-service/src/models/: mod.rs  user.rs
services/claude-ai-service/: Cargo.toml
services/claude-ai-service/src/: anthropic.rs  config.rs  context.rs  error.rs  main.rs
services/claude-ai-service/src/handlers/: chat.rs  cost.rs  iac.rs  mod.rs  policy.rs  security.rs  terminal.rs
services/claude-ai-service/src/models/: chat.rs  iac.rs  mod.rs
services/cloud-common/: Cargo.toml
services/cloud-common/src/: cache.rs  credentials.rs  db.rs  error.rs  feature_flags.rs  lib.rs
services/cloud-service/: Cargo.toml
services/cloud-service/src/: config.rs  error.rs  lib.rs  main.rs
services/cloud-service/src/handlers/: api_gateway.rs  autoscaling.rs  cache_db.rs  cdn.rs  chaos.rs  compute.rs  connections.rs  container_registry.rs  credentials.rs  database.rs  designs.rs  devops.rs  dns.rs  drift.rs  iam.rs  iot.rs  kms.rs  kubernetes.rs  messaging.rs  ml.rs  mod.rs  networking.rs  nosql.rs  serverless.rs  storage.rs  terraform.rs  traffic.rs  volume.rs  waf.rs  workflows.rs
services/cloud-service/src/models/: resource.rs
services/cloud-service/src/providers/: aws.rs  aws_mapper.rs  aws_sdk.rs  azure.rs  azure_mapper.rs  azure_rest_client.rs  azure_sdk.rs  gcp.rs  gcp_mapper.rs  gcp_rest_client.rs  gcp_sdk.rs  mod.rs  store.rs
services/cloud-service/src/traits/: api_gateway.rs  autoscaling.rs  cache_db.rs  cdn.rs  compute.rs  container_registry.rs  database.rs  dns.rs  iam.rs  iot.rs  kms.rs  kubernetes.rs  messaging.rs  ml.rs  mod.rs  networking.rs  nosql.rs  serverless.rs  storage.rs  traffic.rs  volume.rs  waf.rs  workflows.rs
services/cloud-service/tests/: integration.rs
services/cost-service/: Cargo.toml
services/cost-service/src/: config.rs  error.rs  lib.rs  main.rs
services/cost-service/src/handlers/: anomalies.rs  budgets.rs  explorer.rs  finops.rs  forecast.rs  mod.rs  overview.rs  recommendations.rs  reservations.rs  waste.rs
services/cost-service/src/models/: cost.rs
services/cost-service/src/providers/: aws_cost.rs  aws_cost_sdk.rs  azure_cost.rs  azure_cost_sdk.rs  gcp_cost.rs  gcp_cost_sdk.rs  mod.rs
services/cost-service/tests/: integration.rs
services/data-engineering-service/: Cargo.toml
services/data-engineering-service/src/: config.rs  error.rs  lib.rs  main.rs  store.rs
services/data-engineering-service/src/handlers/: data_lake.rs  etl.rs  mod.rs  overview.rs  streaming.rs
services/data-engineering-service/src/models/: data_engineering.rs  mod.rs
services/data-engineering-service/src/providers/: aws_data_engineering.rs  mock.rs  mod.rs
services/data-engineering-service/src/traits/: mod.rs
services/gateway/: Cargo.toml
services/gateway/src/: audit.rs  config.rs  error.rs  main.rs  proxy.rs  rbac.rs  routes.rs  terminal.rs
services/gateway/src/middleware/: auth.rs  rate_limit.rs
services/monitoring-service/: Cargo.toml
services/monitoring-service/src/: config.rs  error.rs  main.rs  store.rs
services/monitoring-service/src/handlers/: alerts.rs  dashboards.rs  incidents.rs  log_stream.rs  logs.rs  metrics.rs  mod.rs  notifications.rs  overview.rs  sla.rs  tracing_handler.rs  uptime.rs  websocket.rs
services/monitoring-service/src/models/: monitoring.rs
services/monitoring-service/src/providers/: aws_monitoring.rs  azure_monitoring.rs  gcp_monitoring.rs  mod.rs
services/monitoring-service/src/traits/: alerts.rs  logs.rs  metrics.rs  mod.rs
services/security-service/: Cargo.toml
services/security-service/src/: config.rs  error.rs  lib.rs  main.rs  scanner.rs  store.rs
services/security-service/src/handlers/: compliance.rs  compliance_code.rs  container_scan.rs  ddos.rs  mod.rs  posture.rs  scans.rs  vulnerability.rs
services/security-service/src/models/: compliance.rs  mod.rs  posture.rs  scan.rs
services/security-service/src/providers/: aws_security.rs  azure_security.rs  gcp_security.rs  mock_security.rs  mod.rs
services/security-service/src/traits/: mod.rs  security.rs
services/security-service/tests/: integration.rs
services/tutorial-service/: Cargo.toml
services/tutorial-service/src/: config.rs  error.rs  main.rs
services/tutorial-service/src/data/: paths.rs
services/tutorial-service/src/handlers/: mod.rs  paths.rs  progress.rs  sandbox.rs  tutorials.rs
services/tutorial-service/src/models/: mod.rs  progress.rs  tutorial.rs
(+291 files in other folders)
