[package]
name = "claude-ai-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = { workspace = true }
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }
actix-web-actors = "4"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
config = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
bytes = "1"
tokio-stream = "0.1"
