[package]
name = "cloud-common"
version = "0.1.0"
edition = "2021"

[dependencies]
# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-sts = "1"
aws-types = "1"

# GCP Auth
gcp_auth = "0.12"

# Azure Identity
azure_identity = "0.22"
azure_core = "0.22"

# Embedded database
surrealdb = { workspace = true }
bcrypt = { workspace = true }

# Shared
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
