[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
cloud-common = { path = "../cloud-common" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
lazy_static = "1"
actix = { workspace = true }
actix-web-actors = "4"
portable-pty = "0.8"
bytes = "1"
