[package]
name = "security-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
config = { workspace = true }
async-trait = { workspace = true }
cloud-common = { path = "../cloud-common" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-securityhub = "1"
aws-sdk-guardduty = "1"
aws-sdk-inspector2 = "1"
azure_core = "0.22"
